--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.17)
 
 project(CPP_Primer_5th_Exercise)
 
-set(CMAKE_CXX_STANDARD 11)
+add_definitions(-std=c++11)
 
 add_subdirectory(Chapter1)
 add_subdirectory(Chapter2)
