--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,16 +14,31 @@ else()
     set(CMAKE_CXX_FLAGS "-Wall -Wextra -O2 -std=c++11")
 endif()
 
-add_subdirectory(Chapter1)
-add_subdirectory(Chapter2)
-add_subdirectory(Chapter3)
-add_subdirectory(Chapter4)
-add_subdirectory(Chapter5)
-add_subdirectory(Chapter6)
-add_subdirectory(Chapter7)
-add_subdirectory(Chapter8)
-add_subdirectory(Chapter9)
+# add_subdirectory(Chapter1)
+# add_subdirectory(Chapter2)
+# add_subdirectory(Chapter3)
+# add_subdirectory(Chapter4)
+# add_subdirectory(Chapter5)
+# add_subdirectory(Chapter6)
+# add_subdirectory(Chapter7)
+# add_subdirectory(Chapter8)
+# add_subdirectory(Chapter9)
 
-add_subdirectory(Chapter12)
-add_subdirectory(Chapter13)
+# add_subdirectory(Chapter12)
+# add_subdirectory(Chapter13)
 
+add_library(cpp_primer_library STATIC 
+    src/fact.cpp
+)
+
+target_include_directories(cpp_primer_library
+    PUBLIC 
+        ${PROJECT_SOURCE_DIR}/include
+)
+
+add_executable(Chapter_1 src/chapter_1.cpp)
+
+target_link_libraries(Chapter_1
+    PRIVATE 
+        cpp_primer_library
+)
