--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,17 +2,10 @@ cmake_minimum_required(VERSION 3.5)
 
 project(CPP_Primer_5th_Exercise)
 
-option(CPP_Primer_5th_Exercise_DEBUG "debug." ON)
+set(CMAKE_BUILD_TYPE Debug)
+set(CMAKE_CXX_FLAGS "-Wall -Wextra -pedantic -O0 -std=c++11")
+# set(CMAKE_CXX_FLAGS "-Wall -Wextra -pedantic -O2 -std=c++11")
 
-if(CPP_Primer_5th_Exercise_DEBUG)
-    message("当前处于Debug模式")
-    set(CMAKE_BUILD_TYPE Debug)
-    set(CMAKE_CXX_FLAGS "-Wall -Wextra -O0 -std=c++11")
-else()
-    message("当前处于Release模式")
-    set(CMAKE_BUILD_TYPE Release)
-    set(CMAKE_CXX_FLAGS "-Wall -Wextra -O2 -std=c++11")
-endif()
 
 add_executable(_01_01 _01_01.cpp)
 add_executable(_01_02 _01_02.cpp)
