--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,9 @@ cmake_minimum_required(VERSION 3.5)
 
 project(CPP_Primer_5th_Exercise)
 
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g -std=c++11")
-set(CMAKE_CXX_FLAGS_RELEASE "-Wall -O3 -g -std=c++11")
 
 add_subdirectory(Chapter-01)
 add_subdirectory(Chapter-02)
@@ -17,3 +17,5 @@ add_subdirectory(Chapter-08)
 add_subdirectory(Chapter-09)
 add_subdirectory(Chapter-12)
 add_subdirectory(Chapter-13)
+
+add_subdirectory(BookStoreProgram)
