--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.21)
 
 project(CPP_Primer_5th_Exercise)
 
 set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 add_subdirectory(Chapter-01)
@@ -15,6 +15,7 @@ add_subdirectory(Chapter-06)
 add_subdirectory(Chapter-07)
 add_subdirectory(Chapter-08)
 add_subdirectory(Chapter-09)
+add_subdirectory(Chapter-10)
 add_subdirectory(Chapter-12)
 add_subdirectory(Chapter-13)
 
