--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
+/.idea
 /.vscode
 /.cache
 /build
+/cmake-build-debug
+/cmake-build-minsizerel
+/cmake-build-release
+/cmake-build-relwithdebinfo
 .DS_Store
