--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required(VERSION 3.21)
+cmake_minimum_required(VERSION 3.16)
 
-project(CPP_Primer_5th_Exercise)
+project(CPP_Primer_5th_Exercise CXX)
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
@@ -18,5 +18,10 @@ add_subdirectory(Chapter-09)
 add_subdirectory(Chapter-10)
 add_subdirectory(Chapter-12)
 add_subdirectory(Chapter-13)
-
 add_subdirectory(BookStoreProgram)
+add_subdirectory(utils)
+
+
+# add_library(Utils STATIC ${CMAKE_CURRENT_SOURCE_DIR}/utils/include/PrintUtils.h)
+# target_include_directories(Utils PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include/)
+
