--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,5 @@
 cmake_minimum_required(VERSION 3.16)
-
 project(CPP_Primer_5th_Exercise CXX)
-
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
@@ -20,8 +18,4 @@ add_subdirectory(Chapter-12)
 add_subdirectory(Chapter-13)
 add_subdirectory(BookStoreProgram)
 add_subdirectory(utils)
-
-
-# add_library(Utils STATIC ${CMAKE_CURRENT_SOURCE_DIR}/utils/include/PrintUtils.h)
-# target_include_directories(Utils PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include/)
-
+add_subdirectory(CLRS)
