--- a/CLRS/CMakeLists.txt
+++ b/CLRS/CMakeLists.txt
@@ -8,3 +8,10 @@ target_include_directories(Graph PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 add_executable(test_graph test_graph.cpp)
 target_link_libraries(test_graph PUBLIC Graph)
+
+add_library(SortAlgorithm STATIC ${CMAKE_CURRENT_SOURCE_DIR}/src/SortAlgorithm.cpp)
+target_include_directories(SortAlgorithm PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
+
+add_executable(test_sort test_sort.cpp)
+target_link_libraries(test_sort PUBLIC SortAlgorithm Utils)
+target_include_directories(test_sort PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../utils/include)
