--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,3 @@
-/.idea
-/.vscode
-/.cache
-/build
-/cmake-build-debug
-/cmake-build-minsizerel
-/cmake-build-release
-/cmake-build-relwithdebinfo
+.vscode
+build
 .DS_Store
-CLRS/notes/tex-docs/*.synctex
-CLRS/notes/tex-docs/*.toc
-CLRS/notes/tex-docs/*.xdv
-CLRS/notes/tex-docs/*.aux
-CLRS/notes/tex-docs/*.log
