--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,34 +21,39 @@ add_subdirectory(Chapter-12)
 add_subdirectory(Chapter-13)
 add_subdirectory(BookStoreProgram)
 
-add_executable(ex-01-01-01 Exercise/01-01-01.cpp)
-add_executable(ex-01-01-02 Exercise/01-01-02.cpp)
-add_executable(ex-01-01-03 Exercise/01-01-03.cpp)
-add_executable(ex-01-01-04 Exercise/01-01-04.cpp)
-add_executable(ex-01-01-05 Exercise/01-01-05.cpp)
-add_executable(ex-01-01-06 Exercise/01-01-06.cpp)
-add_executable(ex-01-01-07 Exercise/01-01-07.cpp)
-add_executable(ex-01-01-08 Exercise/01-01-08.cpp)
-add_executable(ex-01-01-09 Exercise/01-01-09.cpp)
-add_executable(ex-01-01-10 Exercise/01-01-10.cpp)
-add_executable(ex-01-01-11 Exercise/01-01-11.cpp)
-add_executable(ex-01-01-12 Exercise/01-01-12.cpp)
-add_executable(ex-01-01-13 Exercise/01-01-13.cpp)
-add_executable(ex-01-01-14 Exercise/01-01-14.cpp)
-add_executable(ex-01-01-15 Exercise/01-01-15.cpp)
-add_executable(ex-01-01-16 Exercise/01-01-16.cpp)
-add_executable(ex-01-01-17 Exercise/01-01-17.cpp)
-add_executable(ex-01-01-18 Exercise/01-01-18.cpp)
-add_executable(ex-01-01-19 Exercise/01-01-19.cpp)
-add_executable(ex-01-01-20 Exercise/01-01-20.cpp)
-target_include_directories(ex-01-01-20 PUBLIC Headers)
-add_executable(ex-01-01-21 Exercise/01-01-21.cpp)
-target_include_directories(ex-01-01-21 PUBLIC Headers)
-add_executable(ex-01-01-22 Exercise/01-01-22.cpp)
-target_include_directories(ex-01-01-22 PUBLIC Headers)
-add_executable(ex-01-01-23 Exercise/01-01-23.cpp)
-target_include_directories(ex-01-01-23 PUBLIC Headers)
-add_executable(ex-01-01-24 Exercise/01-01-24.cpp)
-target_include_directories(ex-01-01-24 PUBLIC Headers)
-add_executable(ex-01-01-25 Exercise/01-01-25.cpp)
-target_include_directories(ex-01-01-25 PUBLIC Headers)
+add_executable(ex-01-01 Exercise/01-01.cpp)
+add_executable(ex-01-02 Exercise/01-02.cpp)
+add_executable(ex-01-03 Exercise/01-03.cpp)
+add_executable(ex-01-04 Exercise/01-04.cpp)
+add_executable(ex-01-05 Exercise/01-05.cpp)
+add_executable(ex-01-06 Exercise/01-06.cpp)
+add_executable(ex-01-07 Exercise/01-07.cpp)
+add_executable(ex-01-08 Exercise/01-08.cpp)
+add_executable(ex-01-09 Exercise/01-09.cpp)
+add_executable(ex-01-10 Exercise/01-10.cpp)
+add_executable(ex-01-11 Exercise/01-11.cpp)
+add_executable(ex-01-12 Exercise/01-12.cpp)
+add_executable(ex-01-13 Exercise/01-13.cpp)
+add_executable(ex-01-14 Exercise/01-14.cpp)
+add_executable(ex-01-15 Exercise/01-15.cpp)
+add_executable(ex-01-16 Exercise/01-16.cpp)
+add_executable(ex-01-17 Exercise/01-17.cpp)
+add_executable(ex-01-18 Exercise/01-18.cpp)
+add_executable(ex-01-19 Exercise/01-19.cpp)
+add_executable(ex-01-20 Exercise/01-20.cpp)
+target_include_directories(ex-01-20 PUBLIC Headers)
+add_executable(ex-01-21 Exercise/01-21.cpp)
+target_include_directories(ex-01-21 PUBLIC Headers)
+add_executable(ex-01-22 Exercise/01-22.cpp)
+target_include_directories(ex-01-22 PUBLIC Headers)
+add_executable(ex-01-23 Exercise/01-23.cpp)
+target_include_directories(ex-01-23 PUBLIC Headers)
+add_executable(ex-01-24 Exercise/01-24.cpp)
+target_include_directories(ex-01-24 PUBLIC Headers)
+add_executable(ex-01-25 Exercise/01-25.cpp)
+target_include_directories(ex-01-25 PUBLIC Headers)
+
+add_executable(ex-02-01 Exercise/02-01.cpp)
+add_executable(ex-02-02 Exercise/02-02.cpp)
+add_executable(ex-02-03 Exercise/02-03.cpp)
+add_executable(ex-02-04 Exercise/02-04.cpp)
