--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,3 +57,16 @@ add_executable(ex-02-01 Exercise/02-01.cpp)
 add_executable(ex-02-02 Exercise/02-02.cpp)
 add_executable(ex-02-03 Exercise/02-03.cpp)
 add_executable(ex-02-04 Exercise/02-04.cpp)
+add_executable(ex-02-05 Exercise/02-05.cpp)
+add_executable(ex-02-06 Exercise/02-06.cpp)
+add_executable(ex-02-07 Exercise/02-07.cpp)
+add_executable(ex-02-08 Exercise/02-08.cpp)
+add_executable(ex-02-09 Exercise/02-09.cpp)
+add_executable(ex-02-10 Exercise/02-10.cpp)
+add_executable(ex-02-11 Exercise/02-11.cpp)
+add_executable(ex-02-12 Exercise/02-12.cpp)
+add_executable(ex-02-13 Exercise/02-13.cpp)
+add_executable(ex-02-14 Exercise/02-14.cpp)
+add_executable(ex-02-15 Exercise/02-15.cpp)
+add_executable(ex-02-16 Exercise/02-16.cpp)
+add_executable(ex-02-17 Exercise/02-17.cpp)
