--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ add_subdirectory(Chapter-13)
 add_subdirectory(BookStoreProgram)
 
 add_executable(draft-12-01 Drafts/draft-12-01.cpp)
+target_include_directories(draft-12-01 PUBLIC Headers)
 
 add_executable(ex-01-01 Exercise/01-01.cpp)
 add_executable(ex-01-02 Exercise/01-02.cpp)
@@ -96,6 +97,16 @@ add_executable(ex-02-39 Exercise/02-39.cpp)
 add_executable(ex-02-40 Exercise/02-40.cpp)
 add_executable(ex-02-41 Exercise/02-41.cpp)
 add_executable(ex-02-42 Exercise/02-42.cpp)
+
+add_executable(ex-12-01 Exercise/12-01.cpp)
+target_include_directories(ex-12-01 PUBLIC Headers)
+add_executable(ex-12-02 Exercise/12-02.cpp)
+target_include_directories(ex-12-02 PUBLIC Headers)
+add_executable(ex-12-03 Exercise/12-03.cpp)
+target_include_directories(ex-12-03 PUBLIC Headers)
+add_executable(ex-12-04 Exercise/12-04.cpp)
+add_executable(ex-12-05 Exercise/12-05.cpp)
+target_include_directories(ex-12-05 PUBLIC Headers)
 
 add_executable(ex-13-01 Exercise/13-01.cpp)
 add_executable(ex-13-02 Exercise/13-02.cpp)
