--- a/CPP_HOW_TO_PROGRAM_NINTH/CMakeLists.txt
+++ b/CPP_HOW_TO_PROGRAM_NINTH/CMakeLists.txt
@@ -30,3 +30,5 @@ target_link_libraries(EMLOYEE_EXE PRIVATE COMMON_LIB)
 
 add_executable(DATE_EXE ${MAIN_SOURCE_DIR}/DateMain.cpp)
 target_link_libraries(DATE_EXE PRIVATE COMMON_LIB)
+
+add_executable(fig06_09 ${MAIN_SOURCE_DIR}/fig06_09.cpp)
