--- a/CPP_HOW_TO_PROGRAM_NINTH/CMakeLists.txt
+++ b/CPP_HOW_TO_PROGRAM_NINTH/CMakeLists.txt
@@ -34,3 +34,4 @@ target_link_libraries(DATE_EXE PRIVATE COMMON_LIB)
 add_executable(fig06_09 ${MAIN_SOURCE_DIR}/fig06_09.cpp)
 add_executable(fig06_10 ${MAIN_SOURCE_DIR}/fig06_10.cpp)
 add_executable(fig06_11 ${MAIN_SOURCE_DIR}/fig06_11.cpp)
+add_executable(fig06_12 ${MAIN_SOURCE_DIR}/fig06_12.cpp)
