--- a/CPP_HOW_TO_PROGRAM_NINTH/CMakeLists.txt
+++ b/CPP_HOW_TO_PROGRAM_NINTH/CMakeLists.txt
@@ -35,3 +35,4 @@ add_executable(fig06_09 ${MAIN_SOURCE_DIR}/fig06_09.cpp)
 add_executable(fig06_10 ${MAIN_SOURCE_DIR}/fig06_10.cpp)
 add_executable(fig06_11 ${MAIN_SOURCE_DIR}/fig06_11.cpp)
 add_executable(fig06_12 ${MAIN_SOURCE_DIR}/fig06_12.cpp)
+add_executable(fig06_13 ${MAIN_SOURCE_DIR}/fig06_13.cpp)
