--- a/CPP_HOW_TO_PROGRAM_NINTH/CMakeLists.txt
+++ b/CPP_HOW_TO_PROGRAM_NINTH/CMakeLists.txt
@@ -37,3 +37,6 @@ add_executable(fig06_11 ${MAIN_SOURCE_DIR}/fig06_11.cpp)
 add_executable(fig06_12 ${MAIN_SOURCE_DIR}/fig06_12.cpp)
 add_executable(fig06_13 ${MAIN_SOURCE_DIR}/fig06_13.cpp)
 add_executable(fig06_26 ${MAIN_SOURCE_DIR}/fig06_26.cpp)
+add_executable(fig06_28 ${MAIN_SOURCE_DIR}/fig06_28.cpp)
+add_executable(fig06_29 ${MAIN_SOURCE_DIR}/fig06_29.cpp)
+add_executable(fig06_31 ${MAIN_SOURCE_DIR}/fig06_31.cpp)
