feat: add fig06_23.cpp

--- a/CPP_HOW_TO_PROGRAM_NINTH/CMakeLists.txt
+++ b/CPP_HOW_TO_PROGRAM_NINTH/CMakeLists.txt
@@ -36,6 +36,7 @@ add_executable(fig06_10 ${MAIN_SOURCE_DIR}/fig06_10.cpp)
 add_executable(fig06_11 ${MAIN_SOURCE_DIR}/fig06_11.cpp)
 add_executable(fig06_12 ${MAIN_SOURCE_DIR}/fig06_12.cpp)
 add_executable(fig06_13 ${MAIN_SOURCE_DIR}/fig06_13.cpp)
+add_executable(fig06_23 ${MAIN_SOURCE_DIR}/fig06_23.cpp)
 add_executable(fig06_26 ${MAIN_SOURCE_DIR}/fig06_26.cpp)
 add_executable(fig06_28 ${MAIN_SOURCE_DIR}/fig06_28.cpp)
 add_executable(fig06_29 ${MAIN_SOURCE_DIR}/fig06_29.cpp)
