feat: add fig07_0<3/4/5/8/9/10>.cpp

--- a/CPP_HOW_TO_PROGRAM_NINTH/CMakeLists.txt
+++ b/CPP_HOW_TO_PROGRAM_NINTH/CMakeLists.txt
@@ -41,5 +41,11 @@ add_executable(fig06_26 ${MAIN_SOURCE_DIR}/fig06_26.cpp)
 add_executable(fig06_28 ${MAIN_SOURCE_DIR}/fig06_28.cpp)
 add_executable(fig06_29 ${MAIN_SOURCE_DIR}/fig06_29.cpp)
 add_executable(fig06_31 ${MAIN_SOURCE_DIR}/fig06_31.cpp)
+add_executable(fig07_03 ${MAIN_SOURCE_DIR}/fig07_03.cpp)
+add_executable(fig07_04 ${MAIN_SOURCE_DIR}/fig07_04.cpp)
+add_executable(fig07_05 ${MAIN_SOURCE_DIR}/fig07_05.cpp)
+add_executable(fig07_08 ${MAIN_SOURCE_DIR}/fig07_08.cpp)
+add_executable(fig07_09 ${MAIN_SOURCE_DIR}/fig07_09.cpp)
+add_executable(fig07_10 ${MAIN_SOURCE_DIR}/fig07_10.cpp)
 
 add_executable(Ex06_02 ${MAIN_SOURCE_DIR}/Ex06_02.cpp)
