feat: add code 1.2

--- a/CPP_CONCURRENCY_IN_ACTION_SECOND_EDITION/CMakeLists.txt
+++ b/CPP_CONCURRENCY_IN_ACTION_SECOND_EDITION/CMakeLists.txt
@@ -8,3 +8,4 @@ project(CPP_CONCURRENCY_IN_ACTION_SECOND_EDITION CXX)
 
 
 add_executable(code-1.1 code-1.1.cpp)
+add_executable(code-1.2 code-1.2.cpp)
