--- a/CPP_PROGRAMMING_LANGUAGE_FOURTH/CMakeLists.txt
+++ b/CPP_PROGRAMMING_LANGUAGE_FOURTH/CMakeLists.txt
@@ -23,5 +23,5 @@ message("CMAKE_STATIC_LINKER_FLAGS: ${CMAKE_STATIC_LINKER_FLAGS}")
 
 set(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/source)
 
-add_executable(05_03_01_task_and_thread ${SOURCE_DIR}/05_03_01_task_and_thread.cc)
-add_executable(05_03_02_task_and_thread_with_params ${SOURCE_DIR}/05_03_02_task_and_thread_with_params.cc)
+add_executable(05_03_01_task_and_thread ${SOURCE_DIR}/05_03_01_task_and_thread.cpp)
+add_executable(05_03_02_task_and_thread_with_params ${SOURCE_DIR}/05_03_02_task_and_thread_with_params.cpp)
