--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,9 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS True)
 project(CPP_EXERCISE_COLLECTION CXX)
 
 add_subdirectory(ACCELERATED_CPP)
-# add_subdirectory(CPP_CONCURRENCY_IN_ACTION_SECOND_EDITION)
-# add_subdirectory(LEETCODE)
-# add_subdirectory(CPP_HOW_TO_PROGRAM_NINTH)
-# add_subdirectory(CPP_PROGRAMMING_LANGUAGE_FOURTH)
-# add_subdirectory(CPP_PRIMER_FIFTH)
+add_subdirectory(CPP_CONCURRENCY_IN_ACTION_SECOND_EDITION)
+add_subdirectory(LEETCODE)
+add_subdirectory(CPP_HOW_TO_PROGRAM_NINTH)
+add_subdirectory(CPP_PROGRAMMING_LANGUAGE_FOURTH)
+add_subdirectory(CPP_PRIMER_FIFTH)
 
