--- a/ACCELERATED_CPP/CMakeLists.txt
+++ b/ACCELERATED_CPP/CMakeLists.txt
@@ -9,3 +9,7 @@ project(ACCELERATED_CPP CXX)
 add_executable(exercise_0_0 exercise_0_0.cpp)
 add_executable(exercise_0_1 exercise_0_1.cpp)
 add_executable(exercise_0_2 exercise_0_2.cpp)
+add_executable(exercise_0_3 exercise_0_3.cpp)
+add_executable(exercise_0_4 exercise_0_4.cpp)
+add_executable(exercise_0_5 exercise_0_5.cpp)
+add_executable(exercise_0_6 exercise_0_6.cpp)
