feat: update exe 0_*

--- a/ACCELERATED_CPP/CMakeLists.txt
+++ b/ACCELERATED_CPP/CMakeLists.txt
@@ -13,3 +13,7 @@ add_executable(exercise_0_3 exercise_0_3.cpp)
 add_executable(exercise_0_4 exercise_0_4.cpp)
 add_executable(exercise_0_5 exercise_0_5.cpp)
 add_executable(exercise_0_6 exercise_0_6.cpp)
+add_executable(exercise_0_7 exercise_0_7.cpp)
+add_executable(exercise_0_8 exercise_0_8.cpp)
+add_executable(exercise_0_9 exercise_0_9.cpp)
+add_executable(exercise_0_10 exercise_0_10.cpp)
