--- a/ACCELERATED_CPP/CMakeLists.txt
+++ b/ACCELERATED_CPP/CMakeLists.txt
@@ -17,3 +17,4 @@ add_executable(exercise_0_7 exercise_0_7.cpp)
 add_executable(exercise_0_8 exercise_0_8.cpp)
 add_executable(exercise_0_9 exercise_0_9.cpp)
 add_executable(exercise_0_10 exercise_0_10.cpp)
+add_executable(exercise_1_0 exercise_1_0.cpp)
