feat: add 1.1 to 1.4

--- a/ACCELERATED_CPP/CMakeLists.txt
+++ b/ACCELERATED_CPP/CMakeLists.txt
@@ -18,3 +18,8 @@ add_executable(exercise_0_8 exercise_0_8.cpp)
 add_executable(exercise_0_9 exercise_0_9.cpp)
 add_executable(exercise_0_10 exercise_0_10.cpp)
 add_executable(exercise_1_0 exercise_1_0.cpp)
+add_executable(exercise_1_1 exercise_1_1.cpp)
+add_executable(exercise_1_2 exercise_1_2.cpp)
+add_executable(exercise_1_3 exercise_1_3.cpp)
+add_executable(exercise_1_4_A exercise_1_4_A.cpp)
+add_executable(exercise_1_4_B exercise_1_4_B.cpp)
