feat: add exe 1.6

--- a/ACCELERATED_CPP/CMakeLists.txt
+++ b/ACCELERATED_CPP/CMakeLists.txt
@@ -24,3 +24,4 @@ add_executable(exercise_1_3 exercise_1_3.cpp)
 add_executable(exercise_1_4_A exercise_1_4_A.cpp)
 add_executable(exercise_1_4_B exercise_1_4_B.cpp)
 add_executable(exercise_1_5 exercise_1_5.cpp)
+add_executable(exercise_1_6 exercise_1_6.cpp)
