feat: add exe 2.1

--- a/ACCELERATED_CPP/CMakeLists.txt
+++ b/ACCELERATED_CPP/CMakeLists.txt
@@ -26,3 +26,4 @@ add_executable(exercise_1_4_B exercise_1_4_B.cpp)
 add_executable(exercise_1_5 exercise_1_5.cpp)
 add_executable(exercise_1_6 exercise_1_6.cpp)
 add_executable(exercise_2_0 exercise_2_0.cpp)
+add_executable(exercise_2_1 exercise_2_1.cpp)
