--- a/ACCELERATED_CPP/CMakeLists.txt
+++ b/ACCELERATED_CPP/CMakeLists.txt
@@ -27,3 +27,4 @@ add_executable(exercise_1_5 exercise_1_5.cpp)
 add_executable(exercise_1_6 exercise_1_6.cpp)
 add_executable(exercise_2_0 exercise_2_0.cpp)
 add_executable(exercise_2_1 exercise_2_1.cpp)
+add_executable(exercise_2_2 exercise_2_2.cpp)
