--- a/ACCELERATED_CPP/CMakeLists.txt
+++ b/ACCELERATED_CPP/CMakeLists.txt
@@ -28,3 +28,4 @@ add_executable(exercise_1_6 exercise_1_6.cpp)
 add_executable(exercise_2_0 exercise_2_0.cpp)
 add_executable(exercise_2_1 exercise_2_1.cpp)
 add_executable(exercise_2_2 exercise_2_2.cpp)
+add_executable(exercise_2_3 exercise_2_3.cpp)
