feat: add exe 2.4

--- a/ACCELERATED_CPP/CMakeLists.txt
+++ b/ACCELERATED_CPP/CMakeLists.txt
@@ -29,3 +29,4 @@ add_executable(exercise_2_0 exercise_2_0.cpp)
 add_executable(exercise_2_1 exercise_2_1.cpp)
 add_executable(exercise_2_2 exercise_2_2.cpp)
 add_executable(exercise_2_3 exercise_2_3.cpp)
+add_executable(exercise_2_4 exercise_2_4.cpp)
