--- a/ACCELERATED_CPP/CMakeLists.txt
+++ b/ACCELERATED_CPP/CMakeLists.txt
@@ -31,3 +31,4 @@ add_executable(exercise_2_2 exercise_2_2.cpp)
 add_executable(exercise_2_3 exercise_2_3.cpp)
 add_executable(exercise_2_4 exercise_2_4.cpp)
 add_executable(exercise_2_5 exercise_2_5.cpp)
+add_executable(exercise_2_6 exercise_2_6.cpp)
