--- a/ACCELERATED_CPP/CMakeLists.txt
+++ b/ACCELERATED_CPP/CMakeLists.txt
@@ -33,3 +33,5 @@ add_executable(exercise_2_4 exercise_2_4.cpp)
 add_executable(exercise_2_5 exercise_2_5.cpp)
 add_executable(exercise_2_6 exercise_2_6.cpp)
 add_executable(exercise_2_7 exercise_2_7.cpp)
+add_executable(exercise_2_8 exercise_2_8.cpp)
+add_executable(exercise_2_9 exercise_2_9.cpp)
