feat: add exe 2.10

--- a/ACCELERATED_CPP/CMakeLists.txt
+++ b/ACCELERATED_CPP/CMakeLists.txt
@@ -35,3 +35,4 @@ add_executable(exercise_2_6 exercise_2_6.cpp)
 add_executable(exercise_2_7 exercise_2_7.cpp)
 add_executable(exercise_2_8 exercise_2_8.cpp)
 add_executable(exercise_2_9 exercise_2_9.cpp)
+add_executable(exercise_2_10 exercise_2_10.cpp)
