feat: add test std any

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS True)
 
 project(CPP_EXERCISE_COLLECTION CXX)
 
+add_subdirectory(OTHERS)
 add_subdirectory(ACCELERATED_CPP)
 add_subdirectory(PROGRAMMING_PEARLS_SECOND_EDITION)
 add_subdirectory(CPP_CONCURRENCY_IN_ACTION_SECOND_EDITION)
