feat: 调整顶层CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,8 @@
 cmake_minimum_required(VERSION 3.21)
 
-set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(CMAKE_EXPORT_COMPILE_COMMANDS True)
 
-project(CPP_EXERCISE_COLLECTION CXX)
+project(CPP_EXERCISE_COLLECTION)
 
 add_subdirectory(CPP_TEMPLATES)
 add_subdirectory(C_PROGRAMMING_A_MODERN_APPROACH_2ND)
