feat: 新增appendixB.cpp

--- a/CPP_TEMPLATES/CMakeLists.txt
+++ b/CPP_TEMPLATES/CMakeLists.txt
@@ -8,3 +8,5 @@ project(CPP_TEMPLATES CXX)
 
 add_executable(max ${CMAKE_CURRENT_SOURCE_DIR}/basics/max.cpp)
 target_include_directories(max PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/basics)
+
+add_executable(appendixB appendixB.cpp)
