--- a/CPP_TEMPLATES/CMakeLists.txt
+++ b/CPP_TEMPLATES/CMakeLists.txt
@@ -10,3 +10,5 @@ add_executable(max ${CMAKE_CURRENT_SOURCE_DIR}/basics/max.cpp)
 target_include_directories(max PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/basics)
 
 add_executable(appendixB appendixB.cpp)
+
+add_executable(max2 ${CMAKE_CURRENT_SOURCE_DIR}/basics/max2.cpp)
