feat: add max3.cpp

--- a/CPP_TEMPLATES/CMakeLists.txt
+++ b/CPP_TEMPLATES/CMakeLists.txt
@@ -12,3 +12,5 @@ target_include_directories(max PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/basics)
 add_executable(appendixB appendixB.cpp)
 
 add_executable(max2 ${CMAKE_CURRENT_SOURCE_DIR}/basics/max2.cpp)
+
+add_executable(max3 ${CMAKE_CURRENT_SOURCE_DIR}/basics/max3.cpp)
