feat: add max3a

--- a/CPP_TEMPLATES/CMakeLists.txt
+++ b/CPP_TEMPLATES/CMakeLists.txt
@@ -14,3 +14,5 @@ add_executable(appendixB appendixB.cpp)
 add_executable(max2 ${CMAKE_CURRENT_SOURCE_DIR}/basics/max2.cpp)
 
 add_executable(max3 ${CMAKE_CURRENT_SOURCE_DIR}/basics/max3.cpp)
+
+add_executable(max3a ${CMAKE_CURRENT_SOURCE_DIR}/basics/max3a.cpp)
