--- a/C_PROGRAMMING_A_MODERN_APPROACH_2ND/CMakeLists.txt
+++ b/C_PROGRAMMING_A_MODERN_APPROACH_2ND/CMakeLists.txt
@@ -83,7 +83,7 @@ add_executable(_08_01_ _08_01_.c)
 add_executable(_08_02_ _08_02_.c)
 add_executable(_08_03_ _08_03_.c)
 add_executable(_08_04_ _08_04_.c)
-# add_executable(_08_05_ _08_05_.c)
+add_executable(_08_05_ _08_05_.c)
 add_executable(_08_06_ _08_06_.c)
 add_executable(_08_07_ _08_07_.c)
 add_executable(_08_08_ _08_08_.c)
