feat: add stack1.hpp

--- a/CPP_TEMPLATES/CMakeLists.txt
+++ b/CPP_TEMPLATES/CMakeLists.txt
@@ -18,3 +18,6 @@ add_executable(max3 ${CMAKE_CURRENT_SOURCE_DIR}/basics/max3.cpp)
 add_executable(max3a ${CMAKE_CURRENT_SOURCE_DIR}/basics/max3a.cpp)
 
 add_executable(max4 ${CMAKE_CURRENT_SOURCE_DIR}/basics/max4.cpp)
+
+add_executable(stack1test ${CMAKE_CURRENT_SOURCE_DIR}/basics/stack1test.cpp)
+target_include_directories(stack1test PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/basics)
