feat: add printcolltest.cpp

--- a/CPP_TEMPLATES/CMakeLists.txt
+++ b/CPP_TEMPLATES/CMakeLists.txt
@@ -31,3 +31,7 @@ target_include_directories(stack3test PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/basics)
 
 add_executable(stack4test ${CMAKE_CURRENT_SOURCE_DIR}/basics/stack4test.cpp)
 target_include_directories(stack4test PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/basics)
+
+add_executable(printcolltest ${CMAKE_CURRENT_SOURCE_DIR}/basics/printcolltest.cpp)
+target_include_directories(printcolltest PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/basics)
+
