feat: add test omp

--- a/OTHERS/CMakeLists.txt
+++ b/OTHERS/CMakeLists.txt
@@ -4,6 +4,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(CMAKE_EXPORT_COMPILE_COMMANDS True)
 project(OTHERS CXX)
 
+add_subdirectory(test_openmp)
+
 add_executable(test_std_any test_std_any.cpp)
 add_executable(multi_thread multi_thread.cpp)
 add_executable(txt2asci txt2asci.cpp)
