--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,14 +5,14 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS True)
 project(CPP_EXERCISE_COLLECTION)
 
 add_subdirectory(DRAFTS)
-# add_subdirectory(CPP_TEMPLATES)
-# add_subdirectory(C_PROGRAMMING_A_MODERN_APPROACH_2ND)
-# add_subdirectory(OTHERS)
-# add_subdirectory(ACCELERATED_CPP)
-# add_subdirectory(PROGRAMMING_PEARLS_SECOND_EDITION)
-# add_subdirectory(CPP_CONCURRENCY_IN_ACTION_SECOND_EDITION)
-# add_subdirectory(LEETCODE)
-# add_subdirectory(CPP_HOW_TO_PROGRAM_NINTH)
-# add_subdirectory(CPP_PROGRAMMING_LANGUAGE_FOURTH)
-# add_subdirectory(CPP_PRIMER_FIFTH)
+add_subdirectory(CPP_TEMPLATES)
+add_subdirectory(C_PROGRAMMING_A_MODERN_APPROACH_2ND)
+add_subdirectory(OTHERS)
+add_subdirectory(ACCELERATED_CPP)
+add_subdirectory(PROGRAMMING_PEARLS_SECOND_EDITION)
+add_subdirectory(CPP_CONCURRENCY_IN_ACTION_SECOND_EDITION)
+add_subdirectory(LEETCODE)
+add_subdirectory(CPP_HOW_TO_PROGRAM_NINTH)
+add_subdirectory(CPP_PROGRAMMING_LANGUAGE_FOURTH)
+add_subdirectory(CPP_PRIMER_FIFTH)
 
