--- a/OTHERS/CMakeLists.txt
+++ b/OTHERS/CMakeLists.txt
@@ -10,3 +10,4 @@ add_executable(test_std_any test_std_any.cpp)
 add_executable(multi_thread multi_thread.cpp)
 add_executable(txt2asci txt2asci.cpp)
 add_executable(asci2txt asci2txt.cpp)
+add_executable(test-df test_df.cpp)
