--- a/OTHERS/CMakeLists.txt
+++ b/OTHERS/CMakeLists.txt
@@ -11,3 +11,4 @@ add_executable(multi_thread multi_thread.cpp)
 add_executable(txt2asci txt2asci.cpp)
 add_executable(asci2txt asci2txt.cpp)
 add_executable(test-df test_df.cpp)
+add_executable(push-relabel PushRelabel.cpp)
