--- a/CPP_PRIMER_FIFTH/CMakeLists.txt
+++ b/CPP_PRIMER_FIFTH/CMakeLists.txt
@@ -20,6 +20,7 @@ add_subdirectory(Chapter-09)
 add_subdirectory(Chapter-10)
 add_subdirectory(Chapter-12)
 add_subdirectory(Chapter-13)
+add_subdirectory(Chapter-15)
 add_subdirectory(BookStoreProgram)
 
 
