feat: 调整omp使用的编译器链接器及macOS下的libomp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,8 @@ if(CMAKE_HOST_WIN32)
     set(CMAKE_C_COMPILER "gcc")
     set(CMAKE_CXX_COMPILER "g++")
 elseif(CMAKE_HOST_APPLE)
-    set(CMAKE_C_COMPILER "/opt/homebrew/bin/gcc-14")
-    set(CMAKE_CXX_COMPILER "/opt/homebrew/bin/g++-14")
+    # set(CMAKE_C_COMPILER "clang")
+    # set(CMAKE_CXX_COMPILER "clang++")
 elseif(CMAKE_HOST_UNIX)
     set(CMAKE_C_COMPILER "gcc")
     set(CMAKE_CXX_COMPILER "g++")
