feat: 调整构建逻辑

--- a/CPP_TEMPLATES/CMakeLists.txt
+++ b/CPP_TEMPLATES/CMakeLists.txt
@@ -6,11 +6,11 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS True)
 
 project(CPP_TEMPLATES CXX)
 
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/basics/max.cpp)
+
 add_executable(max ${CMAKE_CURRENT_SOURCE_DIR}/basics/max.cpp)
-target_include_directories(max PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/basics)
 
 add_executable(test-max ${CMAKE_CURRENT_SOURCE_DIR}/basics/test_max.cpp)
-target_include_directories(test-max PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/basics)
 
 add_executable(appendixB appendixB.cpp)
 
@@ -23,18 +23,13 @@ add_executable(max3a ${CMAKE_CURRENT_SOURCE_DIR}/basics/max3a.cpp)
 add_executable(max4 ${CMAKE_CURRENT_SOURCE_DIR}/basics/max4.cpp)
 
 add_executable(stack1test ${CMAKE_CURRENT_SOURCE_DIR}/basics/stack1test.cpp)
-target_include_directories(stack1test PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/basics)
 
 
 add_executable(stack2test ${CMAKE_CURRENT_SOURCE_DIR}/basics/stack2test.cpp)
-target_include_directories(stack2test PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/basics)
 
 add_executable(stack3test ${CMAKE_CURRENT_SOURCE_DIR}/basics/stack3test.cpp)
-target_include_directories(stack3test PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/basics)
 
 add_executable(stack4test ${CMAKE_CURRENT_SOURCE_DIR}/basics/stack4test.cpp)
-target_include_directories(stack4test PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/basics)
 
 add_executable(printcolltest ${CMAKE_CURRENT_SOURCE_DIR}/basics/printcolltest.cpp)
-target_include_directories(printcolltest PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/basics)
 
